tests/pass/0034_blocks_between_statements.ee
fn main() {
    debugPrint(1);
    {
        {
        }
    }
    debugPrint(2);
}
