tests/fail/0004_no_main_function.ee
fn notMain() {
    debugPrint(1);
}
